--- a/index.html
+++ b/index.html
@@ -24,31 +24,33 @@
 	<p align="center">UCMOM <span>San Diego</span></p>
 	
 	<!--create 11 blocks to put images in-->
-	<table id="geisel1">
+	<table id="geiselrow1">
 	<tr>
 		<!-- try to make the picture to be clickable-->
-		<td><a href = "#openModal1"><div class="picture"><img src="./images/BSB_B241.jpg" /></div></a>
-				<div id = "openModal1" class = "modalWindow">
-					<div>
-						<!--want to change the font of the h1 heading-->
-						<h1 class  = firstLine>Price Center Room</h1>
-						<h3 class="make_res">MAKE A RESERVATION</h3>
-						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
-						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
-						<a href = "#close" title= "Close" class = "close">X</a>
-					</div>
-				</div>
-		</td>
+
 		
+		<td><a href = "#openModal1"><div title = "Biomedical Sciences Building" class="picture"><img src="./images/BSB_B241.jpg" /></div></a>
+		<div id = "openModal1" class = "modalWindow">
+		     <div>
+			<!--want to change the font of the h1 heading-->
+			<h1 class  = firstLine>Biomedical Sciences Building</h1>
+			<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
+						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
+						<a href = "#close" title= "Close" class = "close">X</a>
+			</div>
+		</div>
+
+		</td>
 		<td>
-			<a href = "#openModal2"><div class="picture"><img src="./images/EBU-3B_3113.jpg" /></div></a>
+			<a href = "#openModal2"><div class="picture"><img src="./images/EBU-3B_3113.JPG" /></div></a>
 				<div id = "openModal2" class = "modalWindow">
 					<div>
 						<!--want to change the font of the h1 heading-->
-						<h1 class  = firstLine>Computer Science and Engineering Building</h1>
-						<h3 class="make_res">MAKE A RESERVATION</h3>
-						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
-						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
+						<h1 class  = firstLine>CSE Room</h1>
+						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
+						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
@@ -56,42 +58,42 @@
 	</tr>
 	</table>
 	
-	<table id="geisel2">
+	<table id="geiselrow2">
 	<tr>
 		<td>
-			<a href = "#openModal3"><div class="picture"><img src="./images/GalbraithHall_252.jpg" /></div></a>
+			<a href = "#openModal3"><div class="picture"><img src="./images/GalbraithHall_252.JPG" /></div></a>
 				<div id = "openModal3" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Galbraith Hall</h1>
-						<h3 class="make_res">MAKE A RESERVATION</h3>
-						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
-						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
+						<h1 class  = firstLine>Lactation Room 3</h1>
+						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
+						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>	
 			</td>
 		
-	<td>
-			<a href = "#openModal4"><div class="picture"><img src="./images/Leichtag_2ndFloor.jpg" /></div></a>
+		<td>
+			<a href = "#openModal4"><div class="picture"><img src="./images/Leichtag_2ndFloor.JPG" /></div></a>
 				<div id = "openModal4" class= "modalWindow">
 					<div>
-						<h1 class  = firstLine>Leichtag 2nd Floor</h1>
-						<h3 class="make_res">MAKE A RESERVATION</h3>
-						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
-						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
+						<h1 class  = firstLine>Lactation Room 4</h1>
+						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
+						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
 		</td>
 		
-	        <td>
-			<a href = "#openModal5"><div class="picture"><img src="./images/Leichtag_3rdFloor.jpg" /></div></a>
+		<td>
+			<a href = "#openModal5"><div class="picture"><img src="./images/Leichtag_3rdFloor.JPG" /></div></a>
 				<div id = "openModal5" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Leichtag 3rd Floor</h1>
-						<h3 class="make_res">MAKE A RESERVATION</h3>
-						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
-						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
+						<h1 class  = firstLine>Lactation Room 5</h1>
+						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
+						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
@@ -99,55 +101,55 @@
 	</tr>
 	</table>
 	
-	<table id="geisel3">
+	<table id="geiselrow3">
 	<tr>
 		<td>
-			<a href = "#openModal6"><div class="picture"><img src = "./images/Nierenberg_416C.jpg"></div></a>
+			<a href = "#openModal6"><div class="picture"><img src="./images/Nierenberg_416C.JPG" /></div></a>
 				<div id = "openModal6" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Nierenberg</h1>
-						<h3 class="make_res">MAKE A RESERVATION</h3>
-						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
-						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
+						<h1 class  = firstLine>Lactation Room 6</h1>
+						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
+						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
 		</td>
 		
 		<td>
-			<a href = "#openModal7"><div class="picture"><img src = "./images/PriceCtrGreen_2.115.jpg"></div></a>
+			<a href = "#openModal7"><div class="picture"><img src="./images/PriceCtrGreen_2.115.JPG" /></div></a>
 				<div id = "openModal7" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Price Center</h1>
-						<h3 class="make_res">MAKE A RESERVATION</h3>
-						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
-						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
+						<h1 class  = firstLine>Lactation Room 7</h1>
+						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
+						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
 		</td>
 		
 		<td>
-			<a href = "#openModal8"><div class="picture"><img src = "./images/SME_4thFloor.jpg"></div></a>
+			<a href = "#openModal8"><div class="picture"><img src="./images/SME_4thFloor.JPG" /></div></a>
 				<div id = "openModal8" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Structural and Materials Engineering 4th Floor</h1>
-						<h3 class="make_res">MAKE A RESERVATION</h3>
-						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
-						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
+						<h1 class  = firstLine>Lactation Room 8</h1>
+						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
+						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
 		</td>
 		
 		<td>
-			<a href = "#openModal9"><div class="picture"><img src = "./images/TorreyPinesNorth_130.jpg"></div></a>
+			<a href = "#openModal9"><div class="picture"><img src="./images/TorreyPinesNorth_130.JPG" /></div></a>
 				<div id = "openModal9" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Torrey Pines North</h1>
-						<h3 class="make_res">MAKE A RESERVATION</h3>
-						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
-						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
+						<h1 class  = firstLine>Lactation Room 9</h1>
+						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
+						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
@@ -155,35 +157,61 @@
 	</tr>
 	</table>
 	
-	<table id="geisel4">
+	<table id="geiselrow4">
 	<tr>
 		<td>
-			<a href = "#openModal10"><div class="picture"><img src = "./images/WomensCtr.jpg"></div></a>
+			<a href = "#openModal10"><div class="picture"><img src="./images/Leichtag_3rdFloor.JPG" /></div></a>
 				<div id  = "openModal10" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Women's Center</h1>
-						<h3 class="make_res">MAKE A RESERVATION</h3>
-						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
-						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
+						<h1 class  = firstLine>Lactation Room 10</h1>
+						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
+						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>	
 				</div>
 		</td>
 		
 		<td>
-			<a href = "#openModal11"><div class="picture"><img src = "./images/ThorntonHospital.jpg"></div></a>
+			<a href = "#openModal11"><div class="picture"><img src="./images/ThorntonHospital.JPG" /></div></a>
 				<div id = "openModal11" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Thornton Hospital</h1>
-						<h3 class="make_res">MAKE A RESERVATION</h3>
-						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
-						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
+						<h1 class  = firstLine>Lactation Room 11</h1>
+						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
+						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>	
 				</div>
 		</td>
 	</tr>
 	</table>
+	
+	<!-- modal window where the calendar to book times would appear -->
+		<div id = "reservtnCalendar" class = "modalWindow">
+			<div>
+				<h3>Choose time slot on calendar:</h3>
+				<h3>Date</h3>
+				<h3>Time</h3>
+				<a href = "#close" title= "Close" class = "close">X</a>
+			</div>
+		</div>
+	
+	<!-- modal window where the cancel button appears to cancel reservations -->	
+		<div id = "reservtnCancel" class = "modalWindow">
+			<div>
+				<h3>Choose reservation to cancel:</h3>
+				<a href = "#close" title= "Close" class = "close">X</a>
+			</div>
+		</div>
+		
+	<!-- modal window where all the user's reservations would appear -->
+		<div id = "reservtnView" class = "modalWindow">
+			<div>
+				<h3>Your Reservations:</h3>
+				<a href = "#close" title= "Close" class = "close">X</a>
+			</div>
+		</div>
 
 	</body>
 </html>
