Add the title attrubite back and set the background color to light sky blue

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link type="text/css" rel="stylesheet" href="stylesheet.css">
 		<title>UC MOM</title>
 	</head>
-	<body>
+	<body style="background-color:#82CAFA">
 		<!--to make the tags have some space between them-->
 		<table id="linkheadertable">
 			<tbody>
@@ -27,7 +27,7 @@
 	<table id="geiselrow1">
 	<tr>
 		<!-- try to make the picture to be clickable-->
-		<td><a href = "#openModal1"><div class="picture"><img src="./images/BSB_B241.jpg" /></div></a>
+		<td><a href = "#openModal1"><div title = "Biomedical Science Building" class="picture"><img src="./images/BSB_B241.jpg" /></div></a>
 				<div id = "openModal1" class = "modalWindow">
 					<div>
 						<!--want to change the font of the h1 heading-->
@@ -41,7 +41,7 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal2"><div class="picture"><img src="./images/EBU-3B_3113.jpg" /></div></a>
+			<a href = "#openModal2"><div title = "Computer Science and Engineering Building" class="picture"><img src="./images/EBU-3B_3113.jpg" /></div></a>
 				<div id = "openModal2" class = "modalWindow">
 					<div>
 						<!--want to change the font of the h1 heading-->
@@ -59,7 +59,7 @@
 	<table id="geiselrow2">
 	<tr>
 		<td>
-			<a href = "#openModal3"><div class="picture"><img src="./images/GalbraithHall_252.jpg" /></div></a>
+			<a href = "#openModal3"><div title = "Galbraith Hall" class="picture"><img src="./images/GalbraithHall_252.jpg" /></div></a>
 				<div id = "openModal3" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Galbraith Hall</h1>
@@ -72,7 +72,7 @@
 			</td>
 		
 	<td>
-			<a href = "#openModal4"><div class="picture"><img src="./images/Leichtag_2ndFloor.jpg" /></div></a>
+			<a href = "#openModal4"><div title = " Leichtag 2nd Floor" class="picture"><img src="./images/Leichtag_2ndFloor.jpg" /></div></a>
 				<div id = "openModal4" class= "modalWindow">
 					<div>
 						<h1 class  = firstLine>Leichtag 2nd Floor</h1>
@@ -85,7 +85,7 @@
 		</td>
 		
 	        <td>
-			<a href = "#openModal5"><div class="picture"><img src="./images/Leichtag_3rdFloor.jpg" /></div></a>
+			<a href = "#openModal5"><div title = "Leichtag 3rd Floor" class="picture"><img src="./images/Leichtag_3rdFloor.jpg" /></div></a>
 				<div id = "openModal5" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Leichtag 3rd Floor</h1>
@@ -102,7 +102,7 @@
 	<table id="geiselrow3">
 	<tr>
 		<td>
-			<a href = "#openModal6"><div class="picture"><img src = "./images/Nierenberg_416C.jpg"></div></a>
+			<a href = "#openModal6"><div title = "Nierenberg" class="picture"><img src = "./images/Nierenberg_416C.jpg"></div></a>
 				<div id = "openModal6" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Nierenberg</h1>
@@ -115,7 +115,7 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal7"><div class="picture"><img src = "./images/PriceCtrGreen_2.115.jpg"></div></a>
+			<a href = "#openModal7"><div title = "Price Center" class="picture"><img src = "./images/PriceCtrGreen_2.115.jpg"></div></a>
 				<div id = "openModal7" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Price Center</h1>
@@ -128,7 +128,7 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal8"><div class="picture"><img src = "./images/SME_4thFloor.jpg"></div></a>
+			<a href = "#openModal8"><div title = "Structural and Materials Engineering" class="picture"><img src = "./images/SME_4thFloor.jpg"></div></a>
 				<div id = "openModal8" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Structural and Materials Engineering 4th Floor</h1>
@@ -141,7 +141,7 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal9"><div class="picture"><img src = "./images/TorreyPinesNorth_130.jpg"></div></a>
+			<a href = "#openModal9"><div title = "Torrey Pines North" class="picture"><img src = "./images/TorreyPinesNorth_130.jpg"></div></a>
 				<div id = "openModal9" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Torrey Pines North</h1>
@@ -158,7 +158,7 @@
 	<table id="geiselrow4">
 	<tr>
 		<td>
-			<a href = "#openModal10"><div class="picture"><img src = "./images/WomensCtr.jpg"></div></a>
+			<a href = "#openModal10"><div title = "Women's Center" class="picture"><img src = "./images/WomensCtr.jpg"></div></a>
 				<div id  = "openModal10" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Women's Center</h1>
@@ -171,7 +171,7 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal11"><div class="picture"><img src = "./images/ThorntonHospital.jpg"></div></a>
+			<a href = "#openModal11"><div title = "Thornton Hospital" class="picture"><img src = "./images/ThorntonHospital.jpg"></div></a>
 				<div id = "openModal11" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Thornton Hospital</h1>
