--- a/login.html
+++ b/login.html
@@ -1,45 +1,55 @@
 <!-- the login page content -->
-<!doctype html>
+<!DOCTYPE html>
 	<head>
-		<title>UC Mom</title>
+		<title>UC MOM Login</title>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css">
 	</head>
 <body>
+<!-- table to hold all the links in the header -->
 	<table id="linkheadertable">
 		<tbody>
-		<tr>
-			<td><h3>HOME</h3></td>
-			<td><h3>MAP</h3></td>
-			<td><a href = "http://women.ucsd.edu/"><h3>CONTACT</h3></a></td>
-			<!-- contact links to women center-->
-			<td><h3><span>LOGIN</span></h3></td>
-		</tr>
+			<tr>
+				<td><a href = "./index.html"><h3>HOME</h3></a></td>
+				<td><a href = "./ucsdmap.html"><h3>MAP</h3></a></td>
+				<td><a href = "http://women.ucsd.edu/"><h3>CONTACT</h3></a></td>
+				<!-- contact links to women center-->
+				<td><a href = "./login.html"><h3 id="loginLink">LOGIN</h3></a></td>
+			</tr>
 		</tbody>
 	</table>
 
+	<!-- horizontal rule -->
 	<hr width="80%";size="3" />
+	
+	<!--title on the page -->
 	<h3 align="center">WELCOME! PLEASE SIGN IN TO ENTER SITE</h3>
+	
+	<!-- div to hold the invalid login text -->
 	<div id="invalidLoginText">
 	<!-- if login fails, insert this inner HTML into this div -->
     <!-- <h3  align="center"><ul><li>INVALID FIELD, PLEASE ENTER AGAIN</li></h3>	
 	<!-- -->
 	</div>
-<form>
-	<div id="loginbox">
-		<div class="inputbox">
-			<!--empty block to enter user email-->
-			<h4 class="white">EMAIL</h3>
-			<input type="username" size="50" name="emaillogin"></td>
-		 	<!--empty block to enter password-->
-			<h4 class="white">5 DIGIT CODE</h3>
-			<input type="password" size="50" name="digitcode">
-		</div>	
-	</div>
+	
+	<!-- the login form -->
+	<form>
+		<div id="loginbox">
+			<div class="inputbox">
+				<!--empty block to enter user email-->
+				<h4 class="white">EMAIL</h3>
+				<input id="usernameInput" type="username" size="50" name="emaillogin"></td>
+				<!--empty block to enter password-->
+				<h4 class="white">5 DIGIT CODE</h3>
+				<input id="pwdInput" type="password" size="50" name="digitcode">
+			</div>	
+		</div>
 
-	<div class="arrow_box">
-		<input type="submit" name="submit" value="ENTER">
-	</div>
-</form>
+		<!-- login button -->
+		<div id="loginBtn" class="arrow_box">
+			<input type="submit" name="submit" value="ENTER">
+		</div>
+		
+	</form>
 
 </body>
 </html>
