--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<title>UC MOM Home</title>
 	</head>
 	
-	<body id="home_body">
+	<body id="home_body" style= background-color:"#82CAFA";>
 		<!--add a feedback button to the left side of the home page-->
 		<div id="fdBtn"><a href="#fdback" ></a></div>
 		<!-- table to hold all the links in the header -->
@@ -56,7 +56,7 @@
 				<div id = "openModal2" class = "modalWindow">
 					<div>
 						<!--want to change the font of the h1 heading-->
-						<h1 class  = firstLine>Computer Science and Engineering Building</h1>
+						<h1 class  = firstLine>Computer Science & Engineering Building</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
 						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
@@ -74,7 +74,7 @@
 			<a href = "#openModal3"><div title = "Galbraith Hall" class="picture"><img src="./images/GalbraithHall_252.jpg" /></div></a>
 				<div id = "openModal3" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Galbraith Hall</h1>
+						<h1 class  = smallLine>Galbraith Hall</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
 						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
@@ -88,7 +88,7 @@
 			<a href = "#openModal4"><div title = "Leichtag 2nd Floor" class="picture"><img src="./images/Leichtag_2ndFloor.jpg" /></div></a>
 				<div id = "openModal4" class= "modalWindow">
 					<div>
-						<h1 class  = firstLine>Leichtag 2nd Floor</h1>
+						<h1 class  = smallLine>Leichtag 2nd Floor</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
 						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
@@ -102,7 +102,7 @@
 			<a href = "#openModal5"><div title = "Leichtag 3rd Floor" class="picture"><img src="./images/Leichtag_3rdFloor.jpg" /></div></a>
 				<div id = "openModal5" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Leichtag 3rd Floor</h1>
+						<h1 class  = smallLine>Leichtag 3rd Floor</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
 						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
@@ -120,7 +120,7 @@
 			<a href = "#openModal6"><div title = "Nierenberg" class="picture"><img src = "./images/Nierenberg_416C.jpg"></div></a>
 				<div id = "openModal6" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Nierenberg</h1>
+						<h1 class  = smallLine>Nierenberg</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
 						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
@@ -134,7 +134,7 @@
 			<a href = "#openModal7"><div title = "Price Center" class="picture"><img src = "./images/PriceCtrGreen_2.115.jpg"></div></a>
 				<div id = "openModal7" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Price Center</h1>
+						<h1 class  = smallLine>Price Center</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
 						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
@@ -148,7 +148,7 @@
 			<a href = "#openModal8"><div title = "Structural and Materials Engineering" class="picture"><img src = "./images/SME_4thFloor.jpg"></div></a>
 				<div id = "openModal8" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Structural and Materials Engineering 4th Floor</h1>
+						<h1 class  = firstLine>Structural & Materials Engineering 4th Floor</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
 						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
@@ -162,7 +162,7 @@
 			<a href = "#openModal9"><div title = "Torrey Pines North" class="picture"><img src = "./images/TorreyPinesNorth_130.jpg"></div></a>
 				<div id = "openModal9" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Torrey Pines North</h1>
+						<h1 class  = smallLine>Torrey Pines North</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
 						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
@@ -180,7 +180,7 @@
 			<a href = "#openModal10"><div title = "Women's Center" class="picture"><img src = "./images/WomensCtr.jpg"></div></a>
 				<div id  = "openModal10" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Women's Center</h1>
+						<h1 class  = smallLine>Women's Center</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
 						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
@@ -194,7 +194,7 @@
 			<a href = "#openModal11"><div title = "Thornton Hospital" class="picture"><img src = "./images/ThorntonHospital.jpg"></div></a>
 				<div id = "openModal11" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Thornton Hospital</h1>
+						<h1 class  = smallLine>Thornton Hospital</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
 						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
