--- a/login.html
+++ b/login.html
@@ -36,19 +36,23 @@
 		<div id="loginbox">
 			<div class="inputbox">
 				<!--empty block to enter user email-->
+				
 				<h4 class="white">EMAIL</h3>
 				<input id="usernameInput" type="username" size="50" name="emaillogin" /></td>
 				<!--empty block to enter password-->
-				<h4 class="white">5 DIGIT CODE</h3>
+				<h4 class="white">PASSWORD</h3>
 				<input id="pwdInput" type="password" autocomplete="off" size="50" name="digitcode" />
+				<br />
+				<br />
+				<input type="submit" name="submit" value="ENTER">
 				
 			</div>	
 		</div>
 
-		<!-- login button -->
-		<div id="loginBtn" class="arrow_box">
-			<input type="submit" name="submit" value="ENTER">
-		</div>
+		
+		
+		
+	
 		
 	</form>
 
