--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 		<title>UC MOM Home</title>
 	</head>
 	
-	<body id="home_body" style= background-color:"#82CAFA";>
+	<body id="home_body">
 		<!--add a feedback button to the left side of the home page-->
 		<div id="fdBtn"><a href="#fdback" ></a></div>
 		<!-- table to hold all the links in the header -->
 		<table id="linkheadertable">
-			<tbody>
 				<tr>
 					<td><a href = "./index.html"><h3 id="homeLink">HOME</h3></a></td>
 					<td><a href = "./ucsdmap.html"><h3>MAP</h3></a></td>
@@ -21,7 +20,6 @@
 					<!-- contact links to women center-->
 					<td><a href = "./login.html"><h3>LOGIN</h3></a></td>
 				</tr>
-			</tbody>
 		</table>
 
 	<!-- put a horizontal line break -->
@@ -38,7 +36,8 @@
 				<div id = "openModal1" class = "modalWindow">
 					<div>
 						<!-- heading of the modal window indicating which room -->
-						<h1 class  = firstLine>Biomedical Sciences Building</h1>
+						<center>
+						<h1 class  = smallLine>Biomedical Sciences Building</h1>
 						<!-- link to a modal window to make a reservation-->
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<!-- link to a modal window to cancel a reservation-->
@@ -46,6 +45,7 @@
 						<!-- link to a modal window to view all reservations-->
 						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
 						<!-- link to close opened modal window-->
+						</center>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
@@ -55,15 +55,21 @@
 			<a href = "#openModal2"><div title = "Computer Science and Engineering Building" class="picture"><img src="./images/EBU-3B_3113.jpg" /></div></a>
 				<div id = "openModal2" class = "modalWindow">
 					<div>
+						<center>
 						<!--want to change the font of the h1 heading-->
-						<h1 class  = firstLine>Computer Science & Engineering Building</h1>
+						<h1 class  = smallLine>CSE Building</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
-						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a> 
+						</center>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
 		</td>
+	</tr>
+	<tr class="caption">
+	<td><center>BSB<center></td>
+	<td><center>CSE <center></td>
 	</tr>
 	</table>
 	
@@ -74,10 +80,12 @@
 			<a href = "#openModal3"><div title = "Galbraith Hall" class="picture"><img src="./images/GalbraithHall_252.jpg" /></div></a>
 				<div id = "openModal3" class = "modalWindow">
 					<div>
+					<center>
 						<h1 class  = smallLine>Galbraith Hall</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
-						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a> 
+						</center>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>	
@@ -88,10 +96,12 @@
 			<a href = "#openModal4"><div title = "Leichtag 2nd Floor" class="picture"><img src="./images/Leichtag_2ndFloor.jpg" /></div></a>
 				<div id = "openModal4" class= "modalWindow">
 					<div>
+					<center>
 						<h1 class  = smallLine>Leichtag 2nd Floor</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
-						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a> 
+						</center>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
@@ -102,14 +112,21 @@
 			<a href = "#openModal5"><div title = "Leichtag 3rd Floor" class="picture"><img src="./images/Leichtag_3rdFloor.jpg" /></div></a>
 				<div id = "openModal5" class = "modalWindow">
 					<div>
+					<center>
 						<h1 class  = smallLine>Leichtag 3rd Floor</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
-						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a> 
+						</center>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
 		</td>
+	</tr>
+	<tr class="caption">
+	<td><center>Galbraith</center></td>
+	<td><center>Leichtag (2nd Floor)</center></td>
+	<td><center>Leichtag (3rd Floor)</center></td>
 	</tr>
 	</table>
 	
@@ -120,10 +137,12 @@
 			<a href = "#openModal6"><div title = "Nierenberg" class="picture"><img src = "./images/Nierenberg_416C.jpg"></div></a>
 				<div id = "openModal6" class = "modalWindow">
 					<div>
+					<center>
 						<h1 class  = smallLine>Nierenberg</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
-						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a> 
+						</center>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
@@ -134,10 +153,12 @@
 			<a href = "#openModal7"><div title = "Price Center" class="picture"><img src = "./images/PriceCtrGreen_2.115.jpg"></div></a>
 				<div id = "openModal7" class = "modalWindow">
 					<div>
+					<center>
 						<h1 class  = smallLine>Price Center</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
-						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a> 
+						</center>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
@@ -148,10 +169,12 @@
 			<a href = "#openModal8"><div title = "Structural and Materials Engineering" class="picture"><img src = "./images/SME_4thFloor.jpg"></div></a>
 				<div id = "openModal8" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Structural & Materials Engineering 4th Floor</h1>
+					<center>
+						<h1 class  = smallLine>SME 4th Floor</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
-						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a> 
+						</center>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
@@ -162,14 +185,22 @@
 			<a href = "#openModal9"><div title = "Torrey Pines North" class="picture"><img src = "./images/TorreyPinesNorth_130.jpg"></div></a>
 				<div id = "openModal9" class = "modalWindow">
 					<div>
+					<center>
 						<h1 class  = smallLine>Torrey Pines North</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
-						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a> 
+						</center>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
 		</td>
+	</tr>
+	<tr class="caption">
+	<td><center>Nirenberg</center></td>
+	<td><center>Price Center</center></td>
+	<td><center>SME</center></td>
+	<td><center>Torrey Pines North</center>	</td>
 	</tr>
 	</table>
 	
@@ -180,10 +211,12 @@
 			<a href = "#openModal10"><div title = "Women's Center" class="picture"><img src = "./images/WomensCtr.jpg"></div></a>
 				<div id  = "openModal10" class = "modalWindow">
 					<div>
+					<center>
 						<h1 class  = smallLine>Women's Center</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
-						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a> 
+						</center>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>	
 				</div>
@@ -194,14 +227,20 @@
 			<a href = "#openModal11"><div title = "Thornton Hospital" class="picture"><img src = "./images/ThorntonHospital.jpg"></div></a>
 				<div id = "openModal11" class = "modalWindow">
 					<div>
+					<center>
 						<h1 class  = smallLine>Thornton Hospital</h1>
 						<a href = "#reservtnCalendar"><h3 class="make_res">MAKE A RESERVATION</h3></a>
 						<a href = "#reservtnCancel"><h3 class="cancel_res">CANCEL A RESERVATION</h3></a>
-						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a>
+						<a href = "#reservtnView"><h3 class="view_res">VIEW ALL RESERVATIONS</h3></a> 
+						</center>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>	
 				</div>
 		</td>
+	</tr>
+		<tr class="caption">
+		<td><center>Women's Center</center></td>
+		<td><center>Thornton Hospital</center></td>
 	</tr>
 	</table>
 	
@@ -209,10 +248,12 @@
 	<!-- modal window code for where the calendar to book times would appear -->
 		<div id = "reservtnCalendar" class = "modalWindow">
 			<div>
+				<center>
 				<!-- have to replace this section with interactive calendar -->
 				<h3>Choose time slot on calendar:</h3>
 				<h3>Date</h3>
 				<h3>Time</h3>
+				</center>
 				<a href = "#close" title= "Close" class = "close">X</a>
 			</div>
 		</div>
@@ -220,10 +261,17 @@
 	<!-- modal window code for where the cancel button appears to cancel reservations -->	
 		<div id = "reservtnCancel" class = "modalWindow">
 			<div>
-				<h3>Choose reservation to cancel:</h3>
+			<center>
+				<h3>Choose a Reservation to Cancel:</h3>
 				<!-- have to populate with reservations made by user with checkboxes-->
 				<!-- button to cancel the reservations marked in their respective checkboxes-->
+				<br />
+				
 				<input id="cancelBtn" type="button" value="Cancel Reservation">
+				<br />
+				<br />
+				<br />
+				<center>
 				<a href = "#close" title= "Close" class = "close">X</a>
 			</div>
 		</div>
@@ -231,7 +279,9 @@
 	<!-- modal window code for where all the user's reservations would appear -->
 		<div id = "reservtnView" class = "modalWindow">
 			<div>
+			<center>
 				<h3>Your Reservations:</h3>
+				<center>
 				<a href = "#close" title= "Close" class = "close">X</a>
 			</div>
 		</div>
