--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 		</td>
 	</tr>
 	<tr class="caption">
-	<td><center>Nirenberg</center></td>
+	<td><center>Nierenberg</center></td>
 	<td><center>Price Center</center></td>
 	<td><center>SME</center></td>
 	<td><center>Torrey Pines North</center>	</td>
