--- a/login.html
+++ b/login.html
@@ -45,6 +45,9 @@
 				<br />
 				<br />
 				<input type="submit" name="submit" value="ENTER">
+				<br />
+				<u><a style="color:black; font-size: 12px; margin-left:240px;"href="http://women.ucsd.edu/">Contact Us to Register </a></u>
+				<br />
 				
 			</div>	
 		</div>
