--- a/ucsdmap.html
+++ b/ucsdmap.html
@@ -175,7 +175,7 @@ html, body { height: 100%; }
 				room5Info = "<p><b>Finding the Room:</b> Next to B241 in the basement; Lactation room accessible via the women's restroom.</p> <p><b>Access:</b> Standard operating hours.</p>  <p><b>Building Contact:</b> Pilar King, pking@ucsd.edu</p> <div class=\"innerPicture\"><img src = \"./images/mapImages/BSB_B241.jpg\">" 
 				
 				room6 = [32.8841, -117.2334]; //Computer Science and Engineering Building 
-				room6Info = "<p><b> Finding the Room:</b> Room 3113  </p> <p><b>Access:</b> Standard Operatin Hours </p>  <p><b>Building Contact:</b> Dave Wargo,dwargo@ucsd.edu</p> <div class=\"innerPicture\"><img src = \"./images/mapImages/EBU-3B_3113.jpg\"><hr />"
+				room6Info = "<p><b> Finding the Room:</b> Room 3113  </p> <p><b>Access: </b> Standard Operatin Hours </p> Mon-Fri 6am-6pm <p><b>Building Contact:</b> Dave Wargo,dwargo@ucsd.edu</p> <div class=\"innerPicture\"><img src = \"./images/mapImages/EBU-3B_3113.jpg\"><hr />"
                                 
 				room7 = [32.86906, -117.25116]; //Nierenberg
 				room7Info = "<p> <b>Finding the Room:</b> 416C. Enter double doors left of northwest corner of building.  Take elevator to 4th floor.  Proceed through hallway to Room #416.  Enter  inner corridor to #416C.</p> <p><b>Access:</b> 7:30am-5pm \(central front doors\)</p>  <p><b>Building Contact:</b> Will Rivera, (58)534-1875, wrivera@ucsd.edu</p> <div class=\"innerPicture\"><img src = \"./images/mapImages/Nierenberg_416C.jpg\">" //FILL IN (MINGSHAN)
